# 100-days-ai-day-01-sentiment-analyzer

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  LINKEDIN_POST.md  README.md  YOUTUBE_SCRIPT.md  pyproject.toml  streamlit_app.py
docs/: WORKFLOW.md  workflow.html
src/sentiment_analyzer/: __init__.py  config.py  main.py  schemas.py  service.py
tests/: test_api.py  test_service.py
