[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentiment-analyzer-api"
version = "1.0.0"
description = "Day 1 — FastAPI sentiment analysis with VADER + premium Streamlit demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "vaderSentiment>=3.3.2",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]
ui = [
  "streamlit>=1.40.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/sentiment_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"streamlit_app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
